update for views

--- a/BondVillains/Base.lproj/Main.storyboard
+++ b/BondVillains/Base.lproj/Main.storyboard
@@ -21,47 +21,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vcd-5O-43s">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WHT-IO-Ygz">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Uwf-et-zEE" userLabel="VillainCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="J5D-qo-eQh">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Uwf-et-zEE" id="ewD-xa-ujL">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="J5D-qo-eQh" id="HTo-M0-tiL">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWs-Mp-wGc">
-                                                    <rect key="frame" x="15" y="0.0" width="28" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwj-55-XaS">
-                                                    <rect key="frame" x="15" y="22" width="28" height="12"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="gWs-Mp-wGc" firstAttribute="leading" secondItem="ewD-xa-ujL" secondAttribute="leadingMargin" constant="-1" id="AMJ-sd-AtN"/>
-                                                <constraint firstItem="mwj-55-XaS" firstAttribute="top" secondItem="gWs-Mp-wGc" secondAttribute="bottom" constant="1" id="LBM-fi-vFH"/>
-                                                <constraint firstItem="gWs-Mp-wGc" firstAttribute="leading" secondItem="mwj-55-XaS" secondAttribute="leading" id="LbO-VN-hkV"/>
-                                                <constraint firstItem="gWs-Mp-wGc" firstAttribute="top" secondItem="ewD-xa-ujL" secondAttribute="top" id="NLV-9I-opI"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="fvd-WU-SMT" id="MyE-35-JoY"/>
-                                    <outlet property="delegate" destination="fvd-WU-SMT" id="bgZ-5d-gvi"/>
-                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WHT-IO-Ygz" firstAttribute="top" secondItem="7I6-We-2KA" secondAttribute="top" id="FDb-f9-5Tj"/>
+                            <constraint firstAttribute="bottom" secondItem="WHT-IO-Ygz" secondAttribute="bottom" id="Gmq-5K-KVl"/>
+                            <constraint firstAttribute="trailing" secondItem="WHT-IO-Ygz" secondAttribute="trailing" id="Wkj-6c-ttG"/>
+                            <constraint firstItem="WHT-IO-Ygz" firstAttribute="leading" secondItem="7I6-We-2KA" secondAttribute="leading" id="ya9-NK-zIQ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZz-bF-YpD" userLabel="First Responder" sceneMemberID="firstResponder"/>
